--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <a href="https://pingw220.github.io/home/">
             Home
         </a>
+        <a href="https://pingw220.github.io/Drum-Kit-Project/">
+            Project 1
+        </a>
         <div>
             Hi! My name is Peter.
         </div>
