--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
             <div class="title">Ping Wang</div>
             <div class="list1">
                 <div class="item1">
+                    <a href="https://pingw220.github.io/home/">
+                        <div>home</div>
+                    </a>
+                </div>
+                <div class="item2">
                     <a href="https://pingw220.github.io/about/">
                         <div>about</div>
                     </a>
                 </div>
-                <div class="item2">
+                <div class="item3">
                     <a href="https://pingw220.github.io/Projects/">
                         <div>Projects</div>
                     </a>
                 </div>
-                <div class="item3">
+                <div class="item4">
                     <a href="https://pingw220.github.io/Cello/">
                         <div>Cello</div>
                     </a>
