--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="headline">
             <div class="title">Ping Wang</div>
-            <div class="list1">
+            <div class="category">
                 <div class="home">
                     <a href="https://pingw220.github.io/home/">
                         <div>Home</div>
