--- a/index.html
+++ b/index.html
@@ -69,14 +69,30 @@
         </div>
         <div class="section">
             <div class="section1">
-                <a href="https://pingw220.github.io/home/">
+                <div class="subtitle">
+                    Drum Kit Project
+                </div>
+                <div class="postpic">
                     <img src = "resource/personal_website.png"/>
-                </a>
+                </div>
+                <div class="subinfo">
+                    <a href="https://pingw220.github.io/home/">
+                        click here to see the project
+                    </a>
+                </div>
             </div>
-            <div class="section2">
-                <a href="https://pingw220.github.io/Drum-Kit-Project/">
+            <div class="section1">
+                <div class="subtitle">
+                    Drum Kit Project
+                </div>
+                <div class="postpic">
                     <img src = "resource/drum_project.png"/>
-                </a>
+                </div>
+                <div class="subinfo">
+                    <a href="https://pingw220.github.io/Drum-Kit-Project/">
+                        click here to see the project
+                    </a>
+                </div>
             </div>
         </div>
         <footer class="footer">
