--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="section">
             <div class="section1">
                 <div class="subtitle">
-                    Drum Kit Project
+                    Personal Website
                 </div>
                 <div class="postpic">
                     <img src = "resource/personal_website.png"/>
