--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
             <div class="menu">Showcase</div>
         </div>
         <div class="section">
-            <div class="section1">
-                <div class="subtitle">
-                    Personal Website
+            <div class="section2">
+                <div class="subtitle2">
+                    Handwritten Digit Recognition Project
                 </div>
-                <div class="postpic">
-                    <img src = "resource/personal_website.png"/>
-                </div>
-                <div class="subinfo">
-                    <a href="https://pingw220.github.io/home/">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3aFW2vfLtAw?si=KXwySgIYqmH2VPQh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                <div class="subinfo">
+                    <a href="https://github.com/pingw220/Handwritten-Digit-Recognition">
                         click here to see the project
                     </a>
                 </div>
